# avr-hal

arduino-hal/: Cargo.toml
arduino-hal/src/: delay.rs  lib.rs
avr-hal-generic/: Cargo.toml
avr-hal-generic/src/: delay.rs  i2c.rs  lib.rs  port.rs  spi.rs  usart.rs
avr-specs/: avr-atmega1280.json  avr-atmega1284p.json  avr-atmega128a.json  avr-atmega164pa.json  avr-atmega168.json  avr-atmega2560.json  avr-atmega328.json  avr-atmega328p.json  avr-atmega32a.json  avr-atmega32u4.json  avr-atmega48p.json  avr-atmega8.json  avr-attiny167.json  avr-attiny2313.json  avr-attiny85.json  avr-attiny88.json  sync-from-upstream.py
examples/arduino-diecimila/: Cargo.toml
examples/arduino-leonardo/: Cargo.toml
examples/arduino-mega1280/: Cargo.toml
examples/arduino-mega2560/: Cargo.toml
examples/arduino-nano/: Cargo.toml
examples/arduino-uno/: Cargo.toml
examples/atmega2560/: Cargo.toml
examples/nano168/: Cargo.toml
examples/sparkfun-promicro/: Cargo.toml
examples/sparkfun-promini-3v3/: Cargo.toml
examples/sparkfun-promini-5v/: Cargo.toml
examples/trinket/: Cargo.toml
examples/trinket-pro/: Cargo.toml
mcu/atmega-hal/: Cargo.toml
mcu/atmega-hal/src/: lib.rs
mcu/attiny-hal/: Cargo.toml
mcu/attiny-hal/src/: lib.rs
