[package]
name = "atmega2560-examples"
version = "0.0.0"
authors = ["Rahix <rahix@rahix.de>", "Armandas Jarušauskas <jarusauskas@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
avr-device = { version = "0.6.0", features = ["rt"] }

[dependencies.atmega-hal]
path = "../../mcu/atmega-hal/"
features = ["atmega2560"]
